# foundation

./: .gitignore  Cargo.toml  README.md
foundation/: Cargo.toml
foundation/src/: alloc.rs  encoding.rs  executor.rs  file.rs  lib.rs  log.rs  process.rs  reflect.rs  serializer.rs  template.rs
foundation/src/alloc/: buffer.rs  string.rs
foundation/src/alloc/string/: builder.rs  pool.rs
foundation/src/executor/: mod.rs  shared.rs  task.rs  wake.rs  yield_now.rs
foundation/src/reflect/: introspectable.rs  registry.rs
foundation/src/template/: bindings.rs  error.rs  parser.rs  render.rs
foundation/src/thread/: config.rs  mod.rs  pool.rs  queue.rs
foundation/tests/: alloc.rs  encoding.rs  executor.rs  file.rs  process.rs  reflect.rs  serializer.rs  template.rs  thread.rs  thread_pool.rs
foundation/tests/alloc/: buffer.rs  string.rs  string_builder.rs  string_pool.rs
foundation/tests/fixtures/: test.toml
foundation/tests/reflect/: introspectable.rs  registry.rs
foundation_derive/: Cargo.toml
foundation_derive/src/: lib.rs
